e2e/__tests__/__snapshots__/transform-js.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transpile js files without Babel 1`] = `
"FAIL type-check __tests__/for-ts/for-ts.spec.ts
  ● Test suite failed to run

    bar-invalid-type.js:1:35 - error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.

    1 const barInvalidType = parseFloat(3.14)
                                        ~~~~

PASS no-type-check __tests__/for-ts/for-ts.spec.ts"
`;
